First version of the package

--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Small description of the service
+Description=Sonarr Daemon
 After=network.target
 
 [Service]
@@ -7,7 +7,12 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__FINALPATH__/
-ExecStart=__FINALPATH__/script >> /var/log/__APP__/__APP__.log 2>&1
+#ExecStart=__FINALPATH__/script >> /var/log/__APP__/__APP__.log 2>&1
+ExecStart=/usr/bin/mono --debug __FINALPATH__/NzbDrone.exe -nobrowser -data=__DATADIR__ >> /var/log/__APP__/__APP__.log 2>&1
+TimeoutStopSec=20
+KillMode=process
+Restart=on-failure
+UMask=002
 
 [Install]
 WantedBy=multi-user.target
