--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,6 +3,12 @@ location __PATH__/ {
 
   # Path to source
   alias __FINALPATH__/ ;
+  proxy_set_header  X-Real-IP  $remote_addr;
+  proxy_set_header        Host            $host;
+  proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header        X-Forwarded-Proto $scheme;
+  proxy_redirect off;
+  proxy_buffering off;
 
   # Force usage of https
   if ($scheme = http) {
