--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -8,7 +8,7 @@ User=__APP__
 Group=__APP__
 WorkingDirectory=__FINALPATH__/
 #ExecStart=__FINALPATH__/script >> /var/log/__APP__/__APP__.log 2>&1
-ExecStart=/usr/bin/mono --debug __FINALPATH__/NzbDrone.exe -nobrowser -data=__DATADIR__ >> /var/log/__APP__/__APP__.log 2>&1
+ExecStart=/usr/bin/mono --debug __FINALPATH__/NzbDrone.exe -nobrowser >> /var/log/__APP__/__APP__.log 2>&1
 TimeoutStopSec=20
 KillMode=process
 Restart=on-failure
