--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,6 +1,8 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
 location __PATH__/ {
 
+  # Path to source
+  alias __FINALPATH__/ ;
   proxy_pass                  http://localhost:__PORT__/;
   proxy_set_header  X-Real-IP  $remote_addr;
   proxy_set_header        Host            $host;
@@ -8,6 +10,11 @@ location __PATH__/ {
   proxy_set_header        X-Forwarded-Proto $scheme;
   proxy_redirect off;
   proxy_buffering off;
+
+  # Force usage of https
+  if ($scheme = http) {
+    rewrite ^ https://$server_name$request_uri? permanent;
+  }
 
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
