--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,7 +3,7 @@ location __PATH__/ {
 
   # Path to source
   alias __FINALPATH__/ ;
-  proxy_pass                  https://localhost:__PORT__/;
+  proxy_pass                  http://localhost:__PORT__/;
   proxy_set_header  X-Real-IP  $remote_addr;
   proxy_set_header        Host            $host;
   proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
