--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,9 +1,9 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-location __PATH__/ {
+location ^~ __PATH__/ {
 
   # Path to source
   alias __FINALPATH__/ ;
-  proxy_pass                  http://localhost:__PORT__/;
+  proxy_pass                  http://localhost:__PORT__;
   proxy_set_header  X-Real-IP  $remote_addr;
   proxy_set_header        Host            $host;
   proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
